variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:13: error: ')' expected but '}' found.
	}
        ^