variables.RunHalf.scala.code
var b=0
var c=0
while((2*b!=c+1){
  if(estSurBiscuit){
    b+=1
  }
  if(estSurOrange){
    c+=1
  }
  avance()
}